<resources>
    <string name="app_name">Movie Scout</string>
    <string name="movie">Movie</string>
    <string name="scout">Scout</string>
    <string name="email">Email/Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="new_to">New to Movie Scout?</string>
    <string name="Sign_up">Sign Up now</string>
    <string name="or">Or Login with</string>
    <string name="google_logo">Google Logo</string>
    <string name="fb_logo">facebook Logo</string>
    <string name="welcome">Welcome!</string>
    <string name="display_name">Username/Email</string>
    <string name="Create_Email">Create an Email</string>
    <string name="Create_password">Create Password </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create your Account</string>
    <string name="discover">Discover Your</string>
    <string name="favorite">Favorite Show</string>
    <string name="find">Find Now and Watch Later!</string>
    <string name="msg">you can browse movies and show by genre,search for specific title or
    checkout our Recommendation for you!
    </string>

    <string name="started">Get Started!</string>
    <string name="Trends">Trends and Popular </string>
    <string name="home">Home</string>
    <string name="fav">Favorite</string>
    <string name="more">More</string>
    <string name="favorite_page">Favorite</string>
    <string name="More">More</string>
    <string name="sign_out">Sign Out</string>
    <string name="genre">Genre</string>
    <string name="menu">Menu</string>
    <string name="search">Search</string>
    <string name="trends_and_popular">Trends and Popular</string>
    <string name="horror">Horror</string>
    <string name="comedy">Comedy</string>
    <string name="action">Action</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>