<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroPage">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="fitStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bgpic"/>




                <LinearLayout
                    android:layout_marginTop="400dp"
                    android:padding="15dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:text="@string/discover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/my_primary"
                    android:textSize="25sp"
                    android:text="@string/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:text="@string/find"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:text="@string/msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                    <Button
                        android:id="@+id/btn_get"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:background="@drawable/btn_custom"
                        android:text='@string/started'
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

        </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>