<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage">

    <!-- RecyclerView for displaying movie list -->
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="60dp"
        android:id="@+id/recyclerViewMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="20dp"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <EditText
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black"
                android:hint="Search"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="20dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/home_icon" />


                <ImageView
                    android:id="@+id/btn_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/favorite_icon" />

                <ImageView
                    android:id="@+id/btn_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/genre_icon" />

                <ImageView
                    android:id="@+id/btn_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:src="@drawable/menu_icon" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/home"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="70dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/fav"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

                <TextView
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="70dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>
